my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EATTRDATA/T_EATTRDATA-struct.h
/* Generated by dmlc, do not edit! */

#ifndef T_EATTRDATA_STRUCT_H
#define T_EATTRDATA_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EATTRDATA(void);


#endif /* not T_EATTRDATA_STRUCT_H */
